<resources>
    <string name="app_name">Manos Locales</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>

    <!-- Loging Activity -->
    <string name="previous">Previous</string>
    <string name="ingrese_su_email">Ingrese su email</string>
    <string name="ingrese_su_contrasenia">Ingrese su contraseña</string>
    <string name="olvidaste_tu_contrasenia">¿Olvidaste tu contraseña?</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="recuerdame">Recuérdame</string>
    <string name="sos_nuevo">¿Sos nuevo?</string>
    <string name="registrate_ahora">Registrate ahora</string>
    <string name="campoemailobligatorio">El campo email es obligatorio</string>
    <string name="contraobligatorio">El campo contraseña es obligatorio</string>
    <string name="usuarioocontramal">Usuario o contraseña incorrectos</string>

    <string name="Formulario">Nombre</string>

    <!-- Product Detail Fragment -->
    <string name="categoria">Categoria: </string>
    <string name="buscarproducto">Buscar productos…</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="descripci_n">Descripción</string>
    <string name="categoria_categoria">Categoria: Categoria </string>
    <string name="productor_nombre">Productor: Nombre </string>
    <string name="productor_spinner">Productor: %1$s</string>
    <string name="categoria_spinner">Categoria: %1$s</string>

    <!-- Setting Activity -->
    <string name="notificaciones">Notificaciones</string>
    <string name="volver">Volver</string>
    <string name="configuraci_n">Configuración</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="notificacionesactivadas">Notificaciones activadas</string>
    <string name="notificacionesdesactivadas">Notificaciones desactivadas</string>
    <string-array name="idiomas_array">
        <item>Español</item>
        <item>Inglés</item>
        <item>Portugués</item>
    </string-array>
    <string name="contactar_al_desarrollador">Contactar al desarrollador</string>

    <!-- ProfileFragment -->
    <string name="perfil">Perfil</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="email">Email</string>
    <string name="dni">DNI</string>
    <string name="datosguardados">Datos guardados</string>

    <string name="inicio">Inicio</string>
    <string name="favoritos">Favoritos</string>

    <!-- Home Fragment-->
    <string-array name="categorias_array">
        <item>Todas</item>
        <item>Alimentos</item>
        <item>Textiles</item>
        <item>Artesanías</item>
        <item>Cosmética Natural</item>
    </string-array>

    <string-array name="categorias_array_es">
        <item>Todas</item>
        <item>Alimentos</item>
        <item>Textiles</item>
        <item>Artesanías</item>
        <item>Cosmética Natural</item>
    </string-array>

    <string name="todas">Todas</string>
    <string name="alimentos">Alimentos</string>
    <string name="textiles">Textiles</string>
    <string name="artesanias">Artesanías</string>
    <string name="cosmeticanatural">Cosmética Natural</string>
    <string name="busqueda_por_voz">Búsqueda por voz</string>

    <!-- Register Activity-->
    <string name="nueva_cuenta">Nueva Cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="documento">Tipo de Documento</string>
    <string name="telefono">Telefono</string>
    <string name="confirmar_contrasenia">Confirmar Contraseña</string>
    <string name="direccion">Direccion</string>
    <string name="codigo_postal">Codigo Postal</string>
    <string name="sos_emprendedor">¿Sos Emprendedor?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="acepto_terminos_condiciones">Acepto Términos y Condiciones y Políticas de Privacidad </string>
    <string name="informacion_emprendimiento">Informacion sobre el Emprendimiento</string>
    <string name="nombre_emprendimiento">Nombre del Emprendimiento</string>
    <string name="breve_descripcion">Breve Descripcion</string>
    <string name="ubicacion_emprendimiento">Ubicación del Emprendimiento</string>
    <string name="formas_contacto">Formas de Contacto</string>
    <string name="completarcamposoblicatorios">Complete correctamente todos los campos obligatorios</string>
    <string name="cantdigitosdni">El DNI debe tener exactamente 8 dígitos</string>
    <string name="cantdigitostelefono">Teléfono inválido. Solo números, hasta 10 dígitos</string>
    <string name="correoinvalido">Correo inválido</string>
    <string name="minimocontra">Debe tener mínimo 8 caracteres, una mayúscula y un número</string>
    <string name="nocoincidecontra">Las contraseñas no coinciden</string>
    <string name="debeaceptarterminos">Debe aceptar los términos y condiciones</string>
    <string-array name="tiposdocumentos">
        <item>DNI</item>
        <item>CUIL</item>
        <item>Pasaporte</item>
    </string-array>

    <!-- ForgotPasswordActivity -->
    <string name="registroexitoso">Registro exitoso</string>
    <string name="restablecercontra">Restablecer contraseña</string>
    <string name="revisarcorreo_generico">Si la dirección de correo electrónico está registrada, recibirás un enlace para restablecer tu contraseña.</string>
    <string name="porfavoringresarcorreo">Por favor, ingresá tu correo</string>
    <string name="revisarcorreo">Correo enviado. Revisa tu bandeja de entrada.</string>
    <string name="error">Error: %1$s</string>
    <string name="intentalonuevo">Intentalo de nuevo</string>
    <string name="enviarenlace">Enviar enlace de recuperación</string>
    <string name="email_no_registrado">El email ingresado no corresponde a una cuenta registrada.</string>

</resources>