<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settingsRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/fondo">

    <TextView
        android:id="@+id/txtSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configuraci_n"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp"
        android:layout_marginTop="50dp"/>

    <!-- Aquí podrías agregar switches o configuraciones -->
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/verdeclaro"
        android:textSize="18sp"
        android:text="@string/modo_oscuro"
        android:padding="8dp"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchNotificaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/verdeclaro"
        android:textSize="18sp"
        android:text="@string/notificaciones"
        android:padding="8dp"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/spinnerIdioma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blancocrema"
        android:layout_marginTop="16dp"
        />


    <Button
        android:id="@+id/btnVolver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/verdeclaro"
        android:textColor="@color/blancocrema"
        android:text="@string/volver"
        android:layout_marginTop="24dp" />
</LinearLayout>
