<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo">

    <!-- TOP BAR con logo alineado a la izquierda -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blancocrema"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blancocrema"
            android:contentInsetStartWithNavigation="0dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/logo_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:padding="8dp"
                    android:src="@drawable/logomain"
                    android:contentDescription="@string/app_name"
                    android:adjustViewBounds="true"
                    android:scaleType="fitStart" />
            </FrameLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textViewDetailName"
        android:text="@string/nombre_del_producto"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/verdeoscuro"
        android:layout_marginTop="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/textViewDetailDescription"
        android:text="@string/descripci_n"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/verdeoscuro"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/textViewDetailCategory"
        android:text="@string/categoria_categoria"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/verdeoscuro"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/textViewDetailProducer"
        android:text="@string/productor_nombre"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/verdeoscuro"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"/>

    <ImageView
        android:id="@+id/ImageProduct"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logopaquete"
        android:scaleType="centerCrop"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/textViewDetailPrice"
        android:text="$0.0"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="@color/verdeoscuro"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

</LinearLayout>